--- a/Client/index.html
+++ b/Client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/BloodIcon-removebg-preview.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/BloodIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HaemoHub</title>
   </head>
